--- a/ovtlyr/notification.html
+++ b/ovtlyr/notification.html
@@ -116,7 +116,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 <span class="active"><a href="notification.html">Notification Management</a></span>
               </div>
               <div class="side_dropdown">
-                <a class="sidebar__item" href="#">
+                <a class="sidebar__item" href="become-a-referer.html">
                   <div class="sidebar__icon">
                     <img src="images/referer.svg" alt="Referer" />
                   </div>
