--- a/ovtlyr/stocks-etfs.html
+++ b/ovtlyr/stocks-etfs.html
@@ -131,6 +131,14 @@ if (localStorage.getItem('darkMode') === "on") {
                 <span>Activity</span>
                 <span>Notification Management</span>
               </div>
+              <div class="side_dropdown">
+                <a class="sidebar__item" href="become-a-referer.html">
+                  <div class="sidebar__icon">
+                    <img src="images/referer.svg" alt="Referer" />
+                  </div>
+                  <div class="sidebar__text">Become a Referer</div>
+                </a>
+              </div>
               <div class="side_dropdown arrow_drop">
                 <a class="sidebar__item" href="contact.html">
                   <div class="sidebar__icon">
