--- a/ovtlyr/become-a-referer.html
+++ b/ovtlyr/become-a-referer.html
@@ -223,13 +223,14 @@ if (localStorage.getItem('darkMode') === "on") {
             <div class="referral_sec12">
               <img src="images/become-referer-light.svg" class="white_img" alt="Become a Referer" />
               <img src="images/become-referer-dark.svg" class="black_img" alt="Become a Referer" />
+              <a href="#">Sign Up to Become a Referer</a>
             </div>
           </div>
           <div class="referral_sec2">
             <div class="referral_sec21">
               <h3>How Referral Program Work</h3>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                <span>laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</span></p>
+              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque <span>laudantium, totam rem aperiam, eaque ipsa quae ab illo 
+                inventore.</span></p>
             </div>
             <div class="referral_sec22">
               <ul>
