--- a/ovtlyr/contact.html
+++ b/ovtlyr/contact.html
@@ -118,6 +118,7 @@ if (localStorage.getItem('darkMode') === "on") {
                     <img src="images/notification.svg" alt="Notification" />
                   </div>
                   <div class="sidebar__text">Notification</div>
+                  <span class="noti_count">2</span>
                 </a>
               </div>
               <div class="side_dropdown arrow_drop">
