--- a/ovtlyr/stock-detail2.html
+++ b/ovtlyr/stock-detail2.html
@@ -102,6 +102,7 @@ if (localStorage.getItem('darkMode') === "on") {
                     <img src="images/notification.svg" alt="Notification" />
                   </div>
                   <div class="sidebar__text">Notification</div>
+                  <span class="noti_count">20</span>
                 </a>
               </div>
               <div class="side_dropdown arrow_drop">
