--- a/ovtlyr/notification.html
+++ b/ovtlyr/notification.html
@@ -97,15 +97,15 @@ if (localStorage.getItem('darkMode') === "on") {
             <div class="sidebar__caption caption-sm">General</div>
             <div class="sidebar__menu">
               <div class="side_dropdown">
-                <a class="sidebar__item" href="notification-2.html">
+                <a class="sidebar__item active" href="notification.html">
                   <div class="sidebar__icon">
                     <img src="images/notification.svg" alt="Notification" />
                   </div>
                   <div class="sidebar__text">Notification</div>
-                  <span class="noti_count">2</span>
+                  <span class="noti_count">80</span>
                 </a>
               </div>
-              <div class="side_dropdown arrow_drop active">
+              <div class="side_dropdown arrow_drop">
                 <a class="sidebar__item" href="subscription.html">
                   <div class="sidebar__icon">
                     <img src="images/setting.svg" alt="Settings" />
@@ -266,26 +266,6 @@ if (localStorage.getItem('darkMode') === "on") {
                         <span></span> 
                       </label>
                     </span>
-                  </li>
-                </ul>
-              </div>
-              <div class="notifiLogs" style="display: none;">
-                <h4>Sep 05, 2023 | 05:00 AM</h4>
-                <ul>
-                  <li>
-                    <p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p>
-                  </li>
-                  <li>
-                    <p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p>
-                  </li>
-                  <li>
-                    <p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p>
-                  </li>
-                  <li>
-                    <p><a href="https://ovtlyr.com/stocks-etfs/NVDA">NVDA</a> eligendi laboriosam delectus odio asperiores.</p>
-                  </li>
-                  <li>
-                    <p><a href="https://ovtlyr.com/stocks-etfs/AAPL">AAPL</a> lorem, ipsum dolor sit amet consectet.</p>
                   </li>
                 </ul>
               </div>
