--- a/ovtlyr/stocks-etfs-2.html
+++ b/ovtlyr/stocks-etfs-2.html
@@ -113,7 +113,7 @@ if (localStorage.getItem('darkMode') === "on") {
             <div class="sidebar__caption caption-sm">General</div>
             <div class="sidebar__menu">
               <div class="side_dropdown">
-                <a class="sidebar__item" href="notification-2.html">
+                <a class="sidebar__item" href="notification.html">
                   <div class="sidebar__icon">
                     <img src="images/notification.svg" alt="Notification" />
                   </div>
