--- a/ovtlyr/coverage-list.html
+++ b/ovtlyr/coverage-list.html
@@ -16,17 +16,27 @@
 </head>
 <body>
   <header class="header_outer">
+    <div class="header_inner1 new_head">
+      <div class="container">
+        <div class="top_header">
+          <p><a href="pricing.html">Take Advantage of our Introductory Pricing While it Lasts!</a></p>
+        </div>
+      </div>
+    </div>
     <div class="header_inner2">
       <div class="container">
         <div class="header_sec">
           <div class="header_sec1">
-            <a href="home.html"><img src="images/black-logo.svg" alt="OVTLYR Logo" /></a>
+            <a href="home.html">
+              <img class="white_logo" src="images/home-footer-logo.svg" alt="OVTLYR Logo" />
+              <img class="black_logo" src="images/black-logo.svg" alt="OVTLYR Logo" />
+            </a>
           </div>
           <div class="header_sec2">
             <ul>
               <li><a href="features.html">Features</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#" class="live_item"><img src="images/live.png" alt="Live" /></a></li>
+              <li><a href="#">Live</a></li>
               <li><a href="log-in.html">Log In</a></li>
               <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
               <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
@@ -39,8 +49,8 @@
                 </div>
                 <ul>
                   <li><a href="features.html">Features</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#" class="live_item"><img src="images/live.png" alt="Live" /></a></li>
+                  <li><a href="pricing.html">Pricing</a></li>
+                  <li><a href="#">Live</a></li>
                   <li><a href="log-in.html">Log In</a></li>
                   <li><a href="sign-up.html" class="signUp_btn">Sign Up</a></li>
                   <li><a href="#" class="trial_btn">Start Your Free Trial Today</a></li>
