--- a/ovtlyr/stock-detail.html
+++ b/ovtlyr/stock-detail.html
@@ -64,18 +64,14 @@ if (localStorage.getItem('darkMode') === "on") {
               </div>
               <div class="sidebarSearch__list">
                 <ul>
-                  <li><a href="#"><span>NASDAQ: </span><span>AAPL</span></a></li>
-                  <li><a href="#"><span>NASDAQ: </span><span>AMAT</span></a></li>
-                  <li class="active"><a href="#"><span>NYSE: </span><span>AIT</span></a></li>
-                  <li><a href="#"><span>NYSE: </span><span>APLE</span></a></li>
-                  <li><a href="#"><span>NASDAQ: </span><span>AAPL</span></a></li>
-                  <li><a href="#"><span>NASDAQ: </span><span>AMAT</span></a></li>
-                  <li><a href="#"><span>NYSE: </span><span>AIT</span></a></li>
-                  <li><a href="#"><span>NYSE: </span><span>APLE</span></a></li>
-                  <li><a href="#"><span>NASDAQ: </span><span>AAPL</span></a></li>
-                  <li><a href="#"><span>NASDAQ: </span><span>AMAT</span></a></li>
-                  <li><a href="#"><span>NYSE: </span><span>AIT</span></a></li>
-                  <li><a href="#"><span>NYSE: </span><span>APLE</span></a></li>
+                  <li><a href="#"><span>Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
+                  <li><a href="#"><span>Apple Inc Apple Inc Apple Inc Apple Inc Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
+                  <li class="active"><a href="#"><span>Apple Inc</span><span>APLE : NYSE</span></a></li>
+                  <li><a href="#"><span>Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
+                  <li><a href="#"><span>Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
+                  <li><a href="#"><span>Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
+                  <li><a href="#"><span>Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
+                  <li><a href="#"><span>Apple Inc</span><div><span>AAPL</span> : <span>NASDAQ</div></a></li>
                 </ul>
               </div>
             </div>
