--- a/ovtlyr/stocks-etfs.html
+++ b/ovtlyr/stocks-etfs.html
@@ -280,7 +280,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <td>
                                 <div class="fav_symbol">
                                   <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="American States Water Company">
-                                    <div class="favSymbol_box"><span class="port_symbol"><span class="noti_box"><span class="noti_count">99+</span></span>AWR</span></div>
+                                    <div class="favSymbol_box"><span class="port_symbol"><span class="noti_box"><span class="noti_count">99</span></span>AWR</span></div>
                                   </a>
                                   <button type="button" class="addTo_fav"><i class="fa-solid fa-star"></i></button>
                                 </div>
