--- a/ovtlyr/subscription.html
+++ b/ovtlyr/subscription.html
@@ -114,7 +114,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 </a>
                 <span class="active"><a href="subscription.html">Subscription</a></span>
                 <span><a href="activity.html">Activity</a></span>
-                <span><a href="notification.html">Notification Management</a></span>
+                <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
               <div class="side_dropdown">
                 <a class="sidebar__item" href="become-a-referer.html">
@@ -213,12 +213,12 @@ if (localStorage.getItem('darkMode') === "on") {
           <div class="settings_head2">
             <div class="settings_tabs">
               <ul class="nav nav-tabs" id="myTab" role="sattingstab">
-                <li class="nav-item" role="stocklist">
+                <!-- <li class="nav-item" role="stocklist">
                   <a href="notification.html" class="nav-link" id="notification-tab" data-bs-target="#notificationtab" type="button" role="tab" aria-controls="notificationtab" aria-selected="false">
                   <show-desk>Notification Management</show-desk>
                   <show-mob>Notifications</show-mob>
                   </a>
-                </li>
+                </li> -->
                 <li class="nav-item" role="sattingstab">
                   <a href="subscription.html" class="nav-link active" id="subscription-tab" data-bs-target="#subscriptiontab" type="button" role="tab" aria-controls="subscriptiontab" aria-selected="true">Subscription</a>
                 </li>
@@ -312,6 +312,7 @@ if (localStorage.getItem('darkMode') === "on") {
                       </div>
                     </div>
                   </div>
+                  <p class="bot_txt">As a special plan user, you are not eligible to upgrade/downgrade your subscription. If any query, kindly get in touch with at support@ovtlyr.com.</p>
                   <div class="plan_boxes mt-4">
                     <div class="plan_boxes1 blue_box">
                       <div class="check_icon">
