--- a/ovtlyr/activity.html
+++ b/ovtlyr/activity.html
@@ -113,7 +113,7 @@ if (localStorage.getItem('darkMode') === "on") {
                 </a>
                 <span><a href="subscription.html">Subscription</a></span>
                 <span class="active"><a href="activity.html">Activity</a></span>
-                <span><a href="notification.html">Notification Management</a></span>
+                <!-- <span><a href="notification.html">Notification Management</a></span> -->
               </div>
               <div class="side_dropdown">
                 <a class="sidebar__item" href="become-a-referer.html">
@@ -212,12 +212,12 @@ if (localStorage.getItem('darkMode') === "on") {
           <div class="settings_head2">
             <div class="settings_tabs">
               <ul class="nav nav-tabs" id="myTab" role="sattingstab">
-                <li class="nav-item" role="stocklist">
+                <!-- <li class="nav-item" role="stocklist">
                   <a href="notification.html" class="nav-link" id="notification-tab" data-bs-target="#notificationtab" type="button" role="tab" aria-controls="notificationtab" aria-selected="false">
                   <show-desk>Notification Management</show-desk>
                   <show-mob>Notifications</show-mob>
                   </a>
-                </li>
+                </li> -->
                 <li class="nav-item" role="sattingstab">
                   <a href="subscription.html" class="nav-link" id="subscription-tab" data-bs-target="#subscriptiontab" type="button" role="tab" aria-controls="subscriptiontab" aria-selected="false">Subscription</a>
                 </li>
