--- a/ovtlyr/appsumo-landing.html
+++ b/ovtlyr/appsumo-landing.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/free-trial.css" />
+<link rel="stylesheet" href="css/front-style.css" />
 </head>
 <body>
   <div class="outer_main">
@@ -24,40 +24,37 @@
               X
               <h3>AppSumo</h3>
             </div>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+          </div>
+          <div class="landing_content">
+            <h3>Hey Sumo-ling! You are almost there</h3>
+            <p>Please set up your account</p>
           </div>
           <div class="account_fields">
             <div class="row">
               <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <div class="form_field">
-                  <label>Name</label>
-                  <input type="text" name="name">
+                  <label>Email</label>
+                  <input type="text" name="email" placeholder="example@gmail.com">
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <div class="form_field">
-                  <label>Email Address</label>
-                  <input type="text" name="email">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="form_field">
-                  <label>AppSumo Redemption Code</label>
+                  <label>Set Password</label>
                   <input type="text" name="code">
                 </div>
               </div>
             </div>
-            <div class="login_buttons">
-              <button type="button">Submit</button>
-            </div>
+            <p class="footer_p mt-0">By creating an account, you are agreeing to our
+              <a href="/terms-of-use" target="_blank">Terms of Use</a> and
+              <a href="/privacy-policy" target="_blank">Privacy Policy.</a>
+            </p>
+            <div class="login_buttons"><button type="button">Submit</button></div>
           </div>
         </div>
       </div>
-    </section>  
+    </section>
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
