--- a/ovtlyr/pricing-old.html
+++ b/ovtlyr/pricing-old.html
@@ -11,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" /> -->
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/front-style.css" />
 </head>
@@ -71,24 +72,19 @@
     </div>
   </header>
   <div class="outer_main">
-    <!-- <section class="pricing_banner">
+    <section class="pricing_banner">
       <div class="pricSec_0">
         <div class="container">
           <div class="pricSec_1">
-            <h3>Risk Less. Make More</h3>
+            <h3>Risk Less. Make More.</h3>
             <h4>Get Off The Sidelines and Start Your 21-Day Free Trial Now</h4>
             <p>Save up to $120/Year with Elite Membership</p>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <section class="pricing_sec2">
       <div class="container">
-        <div class="pricingNew1">
-          <h3>Choose Your Plan</h3>
-          <p>Get Off The Sidelines and Start Your 21-Day Free Trial Now</p>
-          <p>Save up to $120/Year with Elite Membership</p>
-        </div>
         <div class="pricingNew2">
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
@@ -605,6 +601,26 @@
               </video>
             </div>
           </div>
+          <!-- <div class="loop owl-carousel owl-theme mb-0">
+            <div class="item">
+              <div class="testimonial_box">
+                <div class="video_sec">
+                  <video width="100%" controlsList="noplaybackrate nodownload" controls disablepictureinpicture poster="images/mark-story-thumbnail.png">
+                    <source src="images/testimonial-video.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial_box">
+                <div class="video_sec">
+                  <video width="100%" controlsList="noplaybackrate nodownload" controls disablepictureinpicture poster="images/mark-story-thumbnail.png">
+                    <source src="images/ovtlyr-video.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -850,6 +866,22 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/jquery.min.js"></script>
   <!--====== TESTIMONIALS SLIDER SCRIPT ======--> 
+  <!-- <script src="js/owl.carousel.js"></script>
+  <script>
+    jQuery(document).ready(function($) {
+      $('.loop').owlCarousel({
+        center: false,
+        items: 1,
+        slideBy: 1,
+        loop: true,
+        margin: 10,
+        autoplay:false,
+        nav: true,
+        autoplayTimeout:3000,
+        autoplayHoverPause:true
+      });
+    });
+  </script> -->
   <script>
     $(document).ready(function(){
     if($('a.nav-link.annual_link').hasClass('active')){
